--- a/Labo2/Projet/Makefile
+++ b/Labo2/Projet/Makefile
@@ -1,6 +1,6 @@
 SHELL := /bin/bash
 
-EXCLUDE_DIR={./doc,./publi,./hard/script,./hard/sim,./hard/tb,./hard/eda/db,./hard/eda/hps_isw_handoff,./hard/eda/incremental_db,./hard/eda/output_files,./hard/eda/qsys_system,./hard/eda/simulation,./hard/eda/.qsys_edit,./soft/build,./soft/test}
+EXCLUDE_DIR={./publi,./hard/script,./hard/sim,./hard/tb,./hard/eda/db,./hard/eda/hps_isw_handoff,./hard/eda/incremental_db,./hard/eda/output_files,./hard/eda/qsys_system,./hard/eda/simulation,./hard/eda/.qsys_edit,./soft/build,./soft/test}
 EXCLUDE_FILES={./hard/eda/*.tcl~,./hard/eda/*.txt,./hard/eda/*.csv,./hard/eda/*.qws,./hard/eda/*.sopcinfo,./soft/proj/*.axf,./soft/proj/*.objdump,./soft/proj/*.srec}
 
 zip:
