--- a/Labo1/hps_gpio/hard/eda/DE1_SoC_top.qsf
+++ b/Labo1/hps_gpio/hard/eda/DE1_SoC_top.qsf
@@ -47,9 +47,6 @@ set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
-set_global_assignment -name VHDL_FILE ../src/DE1_SoC_top.vhd
-set_global_assignment -name QIP_FILE qsys_system/synthesis/qsys_system.qip
-set_global_assignment -name SDC_FILE DE1_SoC.sdc
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_location_assignment PIN_AJ4 -to ADC_CS_N_o
@@ -775,7 +772,10 @@ set_instance_assignment -name OUTPUT_TERMINATION "SERIES 50 OHM WITH CALIBRATION
 set_instance_assignment -name OUTPUT_TERMINATION "SERIES 50 OHM WITH CALIBRATION" -to HPS_DDR3_DM_o[2]
 set_instance_assignment -name OUTPUT_TERMINATION "SERIES 50 OHM WITH CALIBRATION" -to HPS_DDR3_DM_o[3]
 set_instance_assignment -name CURRENT_STRENGTH_NEW "MINIMUM CURRENT" -to VGA_*
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name QSYS_FILE qsys_system.qsys
+set_global_assignment -name VHDL_FILE ../src/DE1_SoC_top.vhd
+set_global_assignment -name SDC_FILE DE1_SoC.sdc
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
